--- a/stylec.css
+++ b/stylec.css
@@ -219,39 +219,60 @@ color: #000000;
 
 /*header close*/
 
+/*home body*/
+
+.vector{
+    position: absolute;
+    width: 600px;
+    height: 600px;
+    left: 0px;
+    top: 325px;
+}
+
+.hometext1{
+    position: absolute;
+width: 700px;
+height: 100px;
+left: 550px;
+top: 350px;
+
+font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+font-style: normal;
+font-weight: 600;
+font-size: 75px;
+line-height: 100px;
+display: flex;
+align-items: center;
+text-align: right;
+
+color: #000000;
+}
+
+.homebuttons{
+    position: absolute;
+width: 450px;
+height: 131px;
+left: 800px;
+top: 700px;
+}
+
+.homecard{
+    position: absolute;
+    width: 1000px;
+    height: 400px;
+    left: 175px;
+    top: 1000px;
+}
+
+/*home page close*/
+
+/*explore page*/
+
+/*create page*/
+
+/*gradient page*/
+
 /*favourites page*/
-
-#tile8{
-    position: absolute;
-    width: 25%;
-    height: 100%;
-    left: 5%;
-    top: 50%;
-}
-
-#tile9{
-    position: absolute;
-    width: 25%;
-    height: 100%;
-    left: 37.5%;
-    top: 50%;
-}
-
-#tile7{
-    position: absolute;
-    width: 25%;
-    height: 100%;
-    left: 70%;
-    top: 50%;
-}
-
-#exp{
-    position: absolute;
-    width: 25%;
-    height: 100%;
-    left: 5%;
-    top: 120%;
-}
 
 /*footer*/
 
