--- a/main.css
+++ b/main.css
@@ -1,1 +1,288 @@
 /* No CSS *//*# sourceMappingURL=main.css.map */
+/*header open*/
+/*logo*/
+.logo{
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    left: 575px;
+    top: 0px;
+}
+
+/*header*/
+.header{
+    position: absolute;
+    width: 100%;
+    height: 50%;
+    left: 0px;
+    top: 0px;
+    
+    margin-top: 0%;
+    margin-right: 0%;
+    margin-left: 0%;
+    margin-bottom: 0%;
+
+    background: linear-gradient(271.23deg, #C7A0F6 0.22%, #8CE6FD 100%);
+}
+
+/*title*/
+@font-face {
+    font-family: 'Righteous';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Righteous'), local('Righteous-Regular'), url(http://themes.googleusercontent.com/static/fonts/righteous/v2/w5P-SI7QJQSDqB3GziL8XaCWcynf_cDxXwCLxiixG1c.ttf) format('truetype');
+}
+
+.head{
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    left: 515px;
+    top: 125px;
+
+    font-family: 'Righteous';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 50px;
+    line-height: 81px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+
+    color: #FCFDFF;
+
+    text-shadow: 5px 5px 0px #000000;
+}
+
+/*yellow button*/
+.select{
+    position: absolute;
+    width: 85px;
+    height: 30px;
+    left: 45px;
+    top: 230px;
+
+    background: #FDFFAD;
+    border-radius: 50px;
+}
+
+#eselect{
+        position: absolute;
+        width: 85px;
+        height: 30px;
+        left: 295px;
+        top: 230px;
+    
+        background: #FDFFAD;
+        border-radius: 50px;
+}
+
+#cselect{
+        position: absolute;
+        width: 85px;
+        height: 30px;
+        left: 592px;
+        top: 230px;
+    
+        background: #FDFFAD;
+        border-radius: 50px;
+}
+
+#gselect{
+        position: absolute;
+        width: 95px;
+        height: 30px;
+        left: 865px;
+        top: 230px;
+    
+        background: #FDFFAD;
+        border-radius: 50px;
+}
+
+#fselect{
+        position: absolute;
+        width: 110px;
+        height: 30px;
+        left: 1115px;
+        top: 230px;
+    
+        background: #FDFFAD;
+        border-radius: 50px;
+}
+
+/*tabs*/
+@font-face {
+    font-family: 'Comfortaa';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Comfortaa'), local('Comfortaa-Regular'), url(http://themes.googleusercontent.com/static/fonts/comfortaa/v4/qLBu5CQmSMt1H43OiWJ77aCWcynf_cDxXwCLxiixG1c.ttf) format('truetype');
+  }
+
+
+.home{
+
+position: absolute;
+width: 100px;
+height: 30px;
+left: 60px;
+top: 245px;
+
+font-family: 'Comfortaa';
+font-style: normal;
+font-weight: normal;
+font-size: 20px;
+line-height: 54px;
+display: flex;
+align-items: center;
+text-align: center;
+
+color: #000000;
+
+}
+
+#explore{
+
+position: absolute;
+width: 100px;
+height: 30px;
+left: 300px;
+top: 245px;
+
+font-family: 'Comfortaa';
+font-style: normal;
+font-weight: normal;
+font-size: 20px;
+line-height: 54px;
+display: flex;
+align-items: center;
+text-align: center;
+
+color: #000000;
+
+}
+
+#create{
+    position: absolute;
+width: 100px;
+height: 30px;
+left: 600px;
+top: 245px;
+
+font-family: Comfortaa;
+font-style: normal;
+font-weight: normal;
+font-size: 20px;
+line-height: 54px;
+display: flex;
+align-items: center;
+text-align: center;
+
+color: #000000;
+}
+
+#gradient{
+    position: absolute;
+width: 100px;
+height: 30px;
+left: 870px;
+top: 245px;
+
+font-family: Comfortaa;
+font-style: normal;
+font-weight: normal;
+font-size: 20px;
+line-height: 54px;
+display: flex;
+align-items: center;
+text-align: center;
+
+color: #000000;
+}
+
+#favourites{
+    position: absolute;
+width: 100px;
+height: 30px;
+left: 1120px;
+top: 245px;
+
+font-family: Comfortaa;
+font-style: normal;
+font-weight: normal;
+font-size: 20px;
+line-height: 54px;
+display: flex;
+align-items: center;
+text-align: center;
+
+color: #000000;
+}
+
+/*header close*/
+
+/*home body*/
+
+.vector{
+    position: absolute;
+    width: 600px;
+    height: 600px;
+    left: 0px;
+    top: 325px;
+}
+
+.hometext1{
+    position: absolute;
+width: 700px;
+height: 100px;
+left: 550px;
+top: 350px;
+
+font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+font-style: normal;
+font-weight: 600;
+font-size: 75px;
+line-height: 100px;
+display: flex;
+align-items: center;
+text-align: right;
+
+color: #000000;
+}
+
+.homebuttons{
+    position: absolute;
+width: 450px;
+height: 131px;
+left: 800px;
+top: 700px;
+}
+
+.homecard{
+    position: absolute;
+    width: 1000px;
+    height: 400px;
+    left: 175px;
+    top: 1000px;
+}
+
+/*home page close*/
+
+/*explore page*/
+
+/*create page*/
+
+/*gradient page*/
+
+/*favourites page*/
+
+/*footer*/
+
+.footer{
+    position: absolute;
+    width: 100%;
+    height: auto;
+    left: 0%;
+    top: 1500px;
+}
+
+/*footer close*/
